--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,7 @@ body {
   color: #ffffff;
   font-family: "SF Pro Text", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   line-height: 1.6;
+  font-size: 1.1em;
 }
 
 main,
@@ -208,4 +209,16 @@ ul {
 
 .orange {
   color: #ffc000;
+}
+
+/* Highlight color */
+::selection {
+  background: rgba(255, 192, 0, 0.99); /* WebKit/Blink Browsers */
+  color: #fff !important;
+  opacity: 1;
+}
+::-moz-selection {
+  background: rgba(255, 192, 0, 0.99); /* Gecko Browsers */
+  color: #fff !important;
+  opacity: 1;
 }
